{
  "version": 4,
  "terraform_version": "1.11.0",
  "serial": 561,
  "lineage": "f5a25dff-3ac4-2c6a-3a37-e83a07d5f744",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:886436956602:security-group/sg-09669abee1f875f4d",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-09669abee1f875f4d",
            "ingress": [],
            "name": "shay-cluster-cluster-20250306072753474700000002",
            "name_prefix": "shay-cluster-cluster-",
            "owner_id": "886436956602",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "shay-cluster-cluster"
            },
            "tags_all": {
              "Name": "shay-cluster-cluster",
              "app_name": "demo-crm",
              "managedBy": "terraform",
              "owner": "shay",
              "usage": "training"
            },
            "timeouts": null,
            "vpc_id": "vpc-0400e0c1715ea7ffc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:886436956602:security-group/sg-07372abe4b3612c54",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-07372abe4b3612c54",
            "ingress": [],
            "name": "shay-cluster-node-20250306072753475600000005",
            "name_prefix": "shay-cluster-node-",
            "owner_id": "886436956602",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "shay-cluster-node",
              "kubernetes.io/cluster/shay-cluster": "owned"
            },
            "tags_all": {
              "Name": "shay-cluster-node",
              "app_name": "demo-crm",
              "kubernetes.io/cluster/shay-cluster": "owned",
              "managedBy": "terraform",
              "owner": "shay",
              "usage": "training"
            },
            "timeouts": null,
            "vpc_id": "vpc-0400e0c1715ea7ffc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-1593633335",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09669abee1f875f4d",
            "security_group_rule_id": "sgr-0c6e9c912c2d2398b",
            "self": false,
            "source_security_group_id": "sg-07372abe4b3612c54",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.network.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-68574611",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-07372abe4b3612c54",
            "security_group_rule_id": "sgr-09dddc366cee7a918",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.network.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-3701624323",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07372abe4b3612c54",
            "security_group_rule_id": "sgr-0b6596365594a2c6f",
            "self": false,
            "source_security_group_id": "sg-09669abee1f875f4d",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.network.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-4014778936",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07372abe4b3612c54",
            "security_group_rule_id": "sgr-058be7e839002eead",
            "self": false,
            "source_security_group_id": "sg-09669abee1f875f4d",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.network.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-638504366",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07372abe4b3612c54",
            "security_group_rule_id": "sgr-0d9eb2248e74a87da",
            "self": false,
            "source_security_group_id": "sg-09669abee1f875f4d",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.network.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-894628239",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07372abe4b3612c54",
            "security_group_rule_id": "sgr-07b2dad9392a602d8",
            "self": false,
            "source_security_group_id": "sg-09669abee1f875f4d",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.network.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-1374929476",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07372abe4b3612c54",
            "security_group_rule_id": "sgr-05c8fd54ae7f7d425",
            "self": false,
            "source_security_group_id": "sg-09669abee1f875f4d",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.network.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-3489629953",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07372abe4b3612c54",
            "security_group_rule_id": "sgr-0a28cdd540d101b47",
            "self": false,
            "source_security_group_id": "sg-09669abee1f875f4d",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.network.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-2366007571",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07372abe4b3612c54",
            "security_group_rule_id": "sgr-078e07b3c6ecb08a1",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.network.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1037483681",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07372abe4b3612c54",
            "security_group_rule_id": "sgr-0d01b232351ceb48e",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.network.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-2575899982",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-07372abe4b3612c54",
            "security_group_rule_id": "sgr-012b85317cb60347a",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.network.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:886436956602:internet-gateway/igw-0a637223a355c96a0",
            "id": "igw-0a637223a355c96a0",
            "owner_id": "886436956602",
            "tags": {
              "Name": "shay-demo-crm-IGW"
            },
            "tags_all": {
              "Name": "shay-demo-crm-IGW",
              "app_name": "demo-crm",
              "managedBy": "terraform",
              "owner": "shay",
              "usage": "training"
            },
            "vpc_id": "vpc-0400e0c1715ea7ffc"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:886436956602:route-table/rtb-00bc47505edeecc4c",
            "id": "rtb-00bc47505edeecc4c",
            "owner_id": "886436956602",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a637223a355c96a0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "shay-demo-crm-RTB"
            },
            "tags_all": {
              "Name": "shay-demo-crm-RTB",
              "app_name": "demo-crm",
              "managedBy": "terraform",
              "owner": "shay",
              "usage": "training"
            },
            "timeouts": null,
            "vpc_id": "vpc-0400e0c1715ea7ffc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-069609b26fc5f1e62",
            "route_table_id": "rtb-00bc47505edeecc4c",
            "subnet_id": "subnet-055a67a4875df3030"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_route_table.internet",
            "module.network.aws_subnet.this",
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dad63af0848d6a9f",
            "route_table_id": "rtb-00bc47505edeecc4c",
            "subnet_id": "subnet-051b5375b7e09ae6b"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_route_table.internet",
            "module.network.aws_subnet.this",
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:886436956602:subnet/subnet-055a67a4875df3030",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-055a67a4875df3030",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "886436956602",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "shay-demo-crm-SUBNET-0"
            },
            "tags_all": {
              "Name": "shay-demo-crm-SUBNET-0",
              "app_name": "demo-crm",
              "managedBy": "terraform",
              "owner": "shay",
              "usage": "training"
            },
            "vpc_id": "vpc-0400e0c1715ea7ffc"
          },
          "dependencies": [
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:886436956602:subnet/subnet-051b5375b7e09ae6b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-051b5375b7e09ae6b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "886436956602",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "shay-demo-crm-SUBNET-1"
            },
            "tags_all": {
              "Name": "shay-demo-crm-SUBNET-1",
              "app_name": "demo-crm",
              "managedBy": "terraform",
              "owner": "shay",
              "usage": "training"
            },
            "vpc_id": "vpc-0400e0c1715ea7ffc"
          },
          "dependencies": [
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:886436956602:vpc/vpc-0400e0c1715ea7ffc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01051b78bc5bbb448",
            "default_route_table_id": "rtb-088dacd7b8d2a65f0",
            "default_security_group_id": "sg-03ce613b3234e747a",
            "dhcp_options_id": "dopt-05ebc17c2f936d51c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0400e0c1715ea7ffc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-088dacd7b8d2a65f0",
            "owner_id": "886436956602",
            "tags": {
              "Name": "shay-demo-crm-VPC"
            },
            "tags_all": {
              "Name": "shay-demo-crm-VPC",
              "app_name": "demo-crm",
              "managedBy": "terraform",
              "owner": "shay",
              "usage": "training"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}